# darling-bind9

./: .gitignore  CMakeLists.txt  README.md
bind9/: config.h
bind9/lib/bind9/: CMakeLists.txt
bind9/lib/dns/: CMakeLists.txt
bind9/lib/irs/: CMakeLists.txt
bind9/lib/isc/: CMakeLists.txt
bind9/lib/isc/include/isc/: platform.h
bind9/lib/isccc/: CMakeLists.txt
bind9/lib/isccfg/: CMakeLists.txt
bind9/lib/lwres/: CMakeLists.txt
darling/script/: create_gen.sh
