project(isc)

set(isc_sources
	assertions.c
	backtrace.c
	backtrace-emptytbl.c
	base32.c
	base64.c
	bitstring.c
	buffer.c
	bufferlist.c
	commandline.c
	counter.c
	error.c
	event.c
	hash.c
	heap.c
	hex.c
	hmacmd5.c
	hmacsha.c
	httpd.c
	inet_aton.c
	inet_ntop.c
	inet_pton.c
	iterated_hash.c
	lex.c
	lfsr.c
	lib.c
	log.c
	md5.c
	mem.c
	mutexblock.c
	netaddr.c
	netscope.c
	ondestroy.c
	parseint.c
	pool.c
	portset.c
	print.c
	quota.c
	radix.c
	random.c
	ratelimiter.c
	refcount.c
	regex.c
	region.c
	result.c
	rwlock.c
	safe.c
	serial.c
	sha1.c
	sha2.c
	sockaddr.c
	stats.c
	string.c
	strtoul.c
	symtab.c
	task.c
	taskpool.c
	timer.c
	tm.c
	version.c
	unix/app.c
	unix/dir.c
	unix/entropy.c
	unix/errno2result.c
	unix/file.c
	unix/fsaccess.c
	unix/interfaceiter.c
	unix/ipv6.c
	unix/keyboard.c
	unix/net.c
	unix/os.c
	unix/resource.c
	unix/socket.c
	unix/stdio.c
	unix/stdtime.c
	unix/strerror.c
	unix/syslog.c
	unix/time.c
	pthreads/condition.c
	pthreads/mutex.c
	pthreads/thread.c
	nls/msgcat.c
)

add_library(isc OBJECT ${isc_sources})

